--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,6 @@
 @import './globals/reset.scss';
 @import './themes/default.scss';
+
+body {
+  font-family: 'Artifika', 'Times New Roman', serif;
+}
