Add navigation bar, routing and initial styles for it

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,7 @@
 @import './globals/reset.scss';
 @import './themes/default.scss';
+@import './variables/variables.scss';
+@import './mixins/breakpoints.scss';
 
 body {
   font-family: 'Artifika', 'Times New Roman', serif;
