Add register view and fix navigation flaws.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 @import './themes/default.scss';
 @import './variables/variables.scss';
 @import './mixins/breakpoints.scss';
+@import './mixins/transitions.scss';
 
 body {
   font-family: 'Artifika', 'Times New Roman', serif;
