Stylize vuetable-2 and improve some overall styles with mixins and take table into use for users in addition to books

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,9 @@
 @import './globals/reset.scss';
+@import './globals/tags.scss';
 @import './themes/default.scss';
 @import './variables/variables.scss';
 @import './mixins/breakpoints.scss';
+@import './mixins/spacing.scss';
 @import './mixins/transitions.scss';
 
 body {
