--- a/src/styles/themes/default.scss
+++ b/src/styles/themes/default.scss
@@ -2,6 +2,7 @@
 
 // Main
 $background: $white;
+$darken-background: darken($white, 8%);
 $negative-background: $dark-gray;
 $text: $dark-gray;
 $negative-text: $white;
