Add manifest.json and replace NewsPage with AddReviewPage, slight improvements

--- a/src/styles/themes/default.scss
+++ b/src/styles/themes/default.scss
@@ -6,6 +6,7 @@ $darken-background: darken($white, 8%);
 $negative-background: $dark-gray;
 $text: $dark-gray;
 $negative-text: $white;
+$disabled: $gray;
 
 // Pattern
 $pattern-background: $dark-gray;
