--- a/src/styles/globals/tags.scss
+++ b/src/styles/globals/tags.scss
@@ -7,7 +7,7 @@ label {
   margin-bottom: 4px;
 }
 
-input {
+input, select {
   height: $input-height;
   line-height: $input-height;
   font-family: inherit;
@@ -26,7 +26,7 @@ button {
   user-select: none;
   outline: none;
 
-  &:hover {
-    background: $background;
+  &:hover, &:focus {
+    transform: scale(1.05);
   }
 }
